--- a/An/.settings/org.eclipse.core.resources.prefs
+++ b/An/.settings/org.eclipse.core.resources.prefs
@@ -4,6 +4,9 @@ encoding//app/admin/__init__.py=utf8
 encoding//app/admin/form.py=utf-8
 encoding//app/admin/views.py=utf-8
 encoding//app/models.py=utf-8
+encoding//app/plugins/amqp_comsumer.py=utf-8
+encoding//app/plugins/amqp_publisher.py=utf-8
+encoding//app/plugins/ssh_key.py=utf-8
 encoding//demo/amqp_ansible1.9/amqp_comsumer.py=utf-8
 encoding//demo/amqp_ansible1.9/amqp_publisher.py=utf-8
 encoding//demo/amqp_comsumer.py=utf-8
